<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/select"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:layout_margin="3dp"
            android:text="@string/select" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="225dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/frenchBtn"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="French" />

            <Button
                android:id="@+id/spanishBtn"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="Spanish" />

            <Button
                android:id="@+id/csvBtn"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="My CSV" />

            <Button
                android:id="@+id/wordListBtn"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="Manual List" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="250dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/inputWordListBtn"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:layout_marginTop="4dp"
                android:background="#ffffff"
                android:text="Manually Input Word List" />
        </LinearLayout>

        <TextView
            android:id="@+id/diffText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:layout_margin="3dp"
            android:text="@string/selectDiff" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="225dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/beginnerBtn"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="Beginner" />

            <Button
                android:id="@+id/intermediateBtn"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="Intermediate" />

            <Button
                android:id="@+id/expertBtn"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="Expert" />
        </LinearLayout>


        <TextView
            android:id="@+id/boardSizeText"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:layout_margin="3dp"
            android:text="@string/boardSelectTitle" />
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="260sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/fourBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="4X4" />

            <Button
                android:id="@+id/sixBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="6X6" />

            <Button
                android:id="@+id/nineBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="9X9" />

            <Button
                android:id="@+id/twelveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="12X12" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="260dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/csvList"
                android:layout_width="match_parent"
                android:layout_height="50sp"
                android:layout_margin="6dp"
                android:layout_marginBottom="6dp"
                android:layout_weight="1" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="260sp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/importCsvBtn"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="#ffffff"
                android:text="import CSV" />


            <Button
                android:id="@+id/removeCsvBtn"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:text="remove csv" />

        </LinearLayout>


        <TextView
            android:id="@+id/playTitle"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textSize="16sp"
            android:layout_margin="3dp"
            android:gravity="center"
            android:text="Play" />
        <Button
            android:id="@+id/playBtn"
            android:layout_width="match_parent"
            android:layout_height="240sp"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:background="#FFFF99"
            android:text="Play"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="0dp" />


        <Button
            android:id="@+id/listenBtn"
            android:layout_width="match_parent"
            android:layout_height="240sp"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:background="#FFFF99"
            android:text="Listen Mode"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/regularBtn"
            android:layout_width="match_parent"
            android:layout_height="240sp"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:background="#FFFF99"
            android:text="Regular Mode"
            android:textSize="30sp"
            tools:layout_editor_absoluteX="139dp"
            tools:layout_editor_absoluteY="0dp" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
